<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/menu_recipe" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_baseline_soup_kitchen_24"
            android:title="@string/menu_tips" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_credit"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/menu_credit" />
    </group>
</menu>