<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CreditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/creditPageTitle"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center"
                android:text="@string/credit_title"
                android:textAlignment="center"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_text_2"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="@dimen/description_size" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_text_3"
                android:textColor="@color/black"
                android:textSize="@dimen/description_size" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_text_4"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="@dimen/description_size" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>