<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cookingcorner.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.cookingcorner.Fragments.ShoppingFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shopping_list" />
    <fragment
        android:id="@+id/nav_recipe"
        android:name="com.example.cookingcorner.Fragments.RecipeFragment"
        android:label="@string/menu_recipe"
        tools:layout="@layout/fragment_recipe" >
        <action
            android:id="@+id/action_nav_recipe_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.cookingcorner.Fragments.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/addEditFragment"
        android:name="com.example.cookingcorner.Fragments.AddEditFragment"
        android:label="Ingredient Details" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.cookingcorner.Fragments.SettingsFragment"
        android:label="fragment_settings" />
    <fragment
        android:id="@+id/nav_credit"
        android:name="com.example.cookingcorner.Fragments.CreditFragment"
        android:label="fragment_credit"
        tools:layout="@layout/fragment_credit" />
    <fragment
        android:id="@+id/nav_tips"
        android:name="com.example.cookingcorner.CookingTipsFragment"
        android:label="Tips"
        tools:layout="@layout/fragment_cooking_tips" />

</navigation>